--- a/client-1194.conf
+++ b/client-1194.conf
@@ -1,8 +1,8 @@
 client
 dev tun
 dev-type tun
-remote xxx.xxx.xxx.xxx 1194 tcp
-http-proxy 45.76.150.31 8080
+remote xxxxxxxxx 1194 tcp
+http-proxy xxxxxxxxx 8080
 http-proxy-retry
 nobind
 persist-tun
