--- a/client-1194.conf
+++ b/client-1194.conf
@@ -2,7 +2,7 @@ auth-user-pass
 client
 dev tun
 proto tcp
-remote xxxxxxxxx 1194
+remote xxxxxxxxx 1194 tcp
 connect-retry 1
 connect-timeout 120
 resolv-retry infinite
