--- a/client-1194.conf
+++ b/client-1194.conf
@@ -3,6 +3,8 @@ client
 dev tun
 proto tcp
 remote xxxxxxxxx 1194 tcp
+http-proxy xxxxxxxxx 8080
+http-proxy-retry
 connect-retry 1
 connect-timeout 120
 resolv-retry infinite
