--- a/mrtg.conf
+++ b/mrtg.conf
@@ -1,6 +1,6 @@
 LoadMIBs: /usr/share/mibs/netsnmp/UCD-SNMP-MIB
-Target[localhost.cpu]:(100 * 1.3.6.1.4.1.2021.10.1.3.1&1.3.6.1.4.1.2021.10.1.3.1:public@127.0.0.1)
-RouterUptime[localhost.cpu]: public@127.0.0.1
+Target[localhost.cpu]:(100 * 1.3.6.1.4.1.2021.10.1.3.1&1.3.6.1.4.1.2021.10.1.3.1:public@45.76.152.185)  #127.0.0.1
+RouterUptime[localhost.cpu]: public@45.76.152.185 #127.0.0.1
 MaxBytes[localhost.cpu]: 400
 Title[localhost.cpu]: CPU Load
 PageTop[localhost.cpu]: <H1>Active CPU Load %</H1>
@@ -16,7 +16,7 @@ LegendO[localhost.cpu]:
 Options[localhost.cpu]: growright,nopercent,gauge
 
 Target[localhost.freemem]: `/root/mrtg-mem.sh`
-RouterUptime[localhost.freemem]: public@127.0.0.1
+RouterUptime[localhost.freemem]: public@45.76.152.185 #127.0.0.1
 Title[localhost.freemem]: Memory Used 
 PageTop[localhost.freemem]: <h1>Memory Used</h1>
 MaxBytes[localhost.freemem]: 8192
