--- a/vps.conf
+++ b/vps.conf
@@ -1,6 +1,6 @@
 server {
   listen       81;
-  server_name 45.76.152.185 localhost; # 127.0.0.1
+  server_name 127.0.0.1 localhost; 
   access_log /var/log/nginx/vps-access.log;
   error_log /var/log/nginx/vps-error.log error;
   root   /home/vps/public_html;
@@ -12,7 +12,7 @@ server {
 
   location ~ \.php$ {
     include /etc/nginx/fastcgi_params;
-    fastcgi_pass  45.76.152.185:9000; # 127.0.0.1:9000
+    fastcgi_pass  127.0.0.1:9000;
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
   }
