--- a/squid3.conf
+++ b/squid3.conf
@@ -1,5 +1,5 @@
 acl manager proto cache_object
-acl localhost src 45.76.152.185/32 ::1   #127.0.0.1
+acl localhost src 127.0.0.1/32 ::1   #
 acl to_localhost dst 127.0.0.0/8 0.0.0.0/32 ::1
 acl SSL_ports port 443
 acl Safe_ports port 80
@@ -13,7 +13,7 @@ acl Safe_ports port 488
 acl Safe_ports port 591
 acl Safe_ports port 777
 acl CONNECT method CONNECT
-acl SSH dst xxxxxxxxx-xxxxxxxxx/255.255.254.0 
+acl SSH dst xxxxxxxxx-xxxxxxxxx/255.255.255.0 
 http_access allow SSH
 http_access allow manager localhost
 http_access deny manager
